login-signup-gap-issue

--- a/src/index.css
+++ b/src/index.css
@@ -95,24 +95,24 @@
 
     .login-signup-container {
         display: flex;
-        justify-content: space-between;
-        gap: 1px;
+        justify-content: center;
+        gap: 3px;
     }
 
     .login-signup-container a {
         color: var(--dark);
         background: var(--secondary);
-        padding: 5px 10px;
+        padding: 10px 20px;
     }
 
     .login-signup-container a:first-child {
-        border-top-left-radius: 5px;
-        border-bottom-left-radius: 5px;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
     }
 
     .login-signup-container a:last-child {
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
     }
 
     .hero-image {
@@ -512,7 +512,7 @@
         box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
         width: 100px;
         padding: 10px;
-        top: 60px;
+        top: 35px;
         z-index: 1;
         gap: 5px;
         display: flex;
